syntax = "proto3";

package auth_service;

import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";

service AuthService {
    rpc userRegister(UserRegisterInput) returns (UserRegisterResponse){}
    rpc managerRegister(ManagerRegisterInput) returns (ManagerRegisterResponse){}    
    rpc userLogin(UserLoginInput) returns (UserLoginResponse){}
    rpc managerLogin(ManagerLoginInput) returns (ManagerLoginResponse){}
    rpc managerGoogleLogin(GoogleLoginInput) returns (ManagerLoginResponse){}
    rpc managerFacebookLogin(FacebookLoginInput) returns (ManagerLoginResponse){}
    rpc createEmployee(CreateEmployeeInput) returns (CreateEmployeeResponse){}
    // rpc deleteEmployee(DeleteEmployeeInput) returns (DeleteEmployeeResponse){}    
}

message Error{
    int32 errorCode = 1;
    string errorMessage = 2;
}

message UserRegisterInput {
  string password = 1;
  string phoneNumber = 2;
}

message UserRegisterResponse {
  int32 code = 1;
  string message = 2;
  Error error = 3;
}

message ManagerRegisterInput {
  string email = 1;
  string password = 2;
  string phoneNumber = 3;
  string companyName = 4;
}

message ManagerRegisterResponse {
  int32 code = 1;
  string message = 2;
  Error error = 3;
}

message UserLoginInput {
    string userName = 1;
    string password = 2;
}

message UserLoginResponse {
    string accessToken = 1;
}

message ManagerLoginInput {
    string email = 1;
    string password = 2;
}

message ManagerLoginResult {
  string accessToken = 1;
}

message GoogleLoginInput {
    string email = 1;
    string token = 2;    
}

message FacebookLoginInput {
  string id = 1;
  string name = 2;
  string email = 3;
  string token = 4;
    
}

message ManagerLoginResponse {
  string accessToken = 1;
}

message CreateEmployeeInput {
  string email = 1;  
  string phoneNumber = 3;
  string password = 2;
}

message CreateEmployeeResponse {
  int32 code = 1;
  string message = 2;
  Error error = 3;
}